tzdata (2011h.meego1) unstable; urgency=low

  * new olson data, 2011-h
  * new MCC list from wikipedia
  * two more MCC codes

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Tue, 28 Jun 2011 09:18:52 +0300

tzdata (2011g.meego1) unstable; urgency=low

  * new olson data and code, 2011-g
  * Fixes: NB#236344 - new Olson data

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Thu, 05 May 2011 08:33:58 +0300

tzdata (2011e.meego1) unstable; urgency=low

  * new olson data and code, 2011-e

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Fri, 01 Apr 2011 17:42:52 +0200

tzdata (2011d.meego1) unstable; urgency=low

  * new olson data and code, 2011-d

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Tue, 15 Mar 2011 10:33:37 +0200

tzdata (2011c.meego2) unstable; urgency=low

  * new olson data and code, 2011-c

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Mon, 14 Mar 2011 15:31:18 +0200

tzdata (2011b.meego1) unstable; urgency=low

  * new olson data and code 2011-b
  * minor changes related to Micronesia renamed zones

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Thu, 17 Feb 2011 14:20:00 +0200

tzdata (2008h.meego6) unstable; urgency=low

  * scripts improved

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Mon, 07 Feb 2011 21:52:29 +0200

tzdata (2008h.meego5) unstable; urgency=low

  * creating zone list in a more careful way

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Wed, 01 Dec 2010 19:57:07 +0200

tzdata (2008h.meego4) unstable; urgency=low

  * zone list for calendar

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Tue, 30 Nov 2010 16:05:03 +0200

tzdata (2008h.meego3) unstable; urgency=low

  * new packaging of the old data

 -- Ilya Dogolazky <ilya.dogolazky@nokia.com>  Mon, 29 Nov 2010 12:37:46 +0200